# commonos-files

./: Cargo.toml  README.md
src/: app.rs  components.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gql.rs  main.rs
src-tauri/src/gql/: uploadSync.rs
src/components/: AuthForm.rs  Main.rs  SocketExample.rs
src/contexts/: user.rs
src/gql/: authenticate.graphql  authenticate.rs
src/helpers/: auth.rs
