[package]
name = "commonos-files"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes"] }  # for async sleep
async-channel = "2.3.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-graphql = "1.0.0"
base64 = "0.22.1"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
